@@ -1,3 +1,4 @@
+* Add option to show revisions
 * Add a multi selection widget for many2many
 * Remove auto-refresh
 * Add support of domain for non-relation field
